k8s-training/solutions/14_gateway_api/gateway_nginx.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: marius-gateway
  namespace: mariusbu
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
